<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/see_film_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/film_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/language_preferences"
        android:icon="@drawable/ic_language"
        android:title="@string/language_preferences"
        app:showAsAction="ifRoom" />

</menu>